feat: the sales module was implemented
